Add index.html for Valentine's Day

--- a/index.html
+++ b/index.html
@@ -3,90 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valentine's Day Surprise</title>
+  <title>Be My Valentine?</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #FFE4E1; /* Misty Rose */
+      background-color: #FFB6C1; /* Light Pink */
       color: #8B0000; /* Dark Red */
       text-align: center;
+      overflow: hidden;
     }
 
     h1 {
-      margin-top: 20px;
-      font-size: 3em;
+      margin-top: 50px;
+      font-size: 4em;
+      color: #800000; /* Maroon */
     }
 
-    p {
+    .button-container {
+      margin-top: 30px;
+    }
+
+    .button {
+      padding: 10px 20px;
+      margin: 10px;
       font-size: 1.5em;
-    }
-
-    .secret-code {
-      margin-top: 20px;
-      padding: 10px;
-      font-size: 1em;
-      border: 2px solid #8B0000;
+      border: none;
       border-radius: 5px;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
+    .yes-button {
+      background-color: #008000; /* Green */
+    }
+
+    .yes-button:hover {
+      background-color: #006400; /* Dark Green */
+    }
+
+    .no-button {
+      background-color: #FF0000; /* Red */
+      position: absolute;
+    }
+
+    /* Style for hidden content */
     .hidden-content {
       display: none;
-      margin-top: 30px;
+      margin-top: 20px;
     }
 
     .hidden-content img {
       max-width: 90%;
       height: auto;
-      border: 3px solid #8B0000;
-      border-radius: 20px;
+      border: 3px solid #800000;
+      border-radius: 15px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Valentine's Day Header -->
-  <h1>Happy Valentine's Day 💖</h1>
-  <p>A special surprise is waiting for you...</p>
+  <h1>Will you be my Valentine? ❤</h1>
 
-  <!-- Music Autoplay -->
-  <audio autoplay loop>
-    <source src="your-music-path/who-you-want-qulinez.mp3" type="audio/mpeg">
-    <!-- Add the song "Who You Want" in the same folder or point to its location -->
-    Your browser does not support the audio element.
-  </audio>
-
-  <!-- Secret Code Input -->
-  <div>
-    <input id="codeInput" class="secret-code" type="text" placeholder="Enter the secret code" />
-    <button onclick="checkCode()">Unlock</button>
+  <div class="button-container">
+    <button class="button yes-button" onclick="accept()">YES</button>
+    <button class="button no-button" id="noButton">NO</button>
   </div>
 
-  <!-- Hidden Content -->
   <div id="hiddenContent" class="hidden-content">
-    <h2>You unlocked the surprise! 🎉</h2>
-    <p>Here is the gallery of memories and love:</p>
-    <figure>
-      <img src="your-image-path/image1.jpg" alt="Picture 1">
-      <figcaption>Memory 1</figcaption>
-    </figure>
-    <figure>
-      <img src="your-image-path/image2.jpg" alt="Picture 2">
-      <figcaption>Memory 2</figcaption>
-    </figure>
+    <h2>Yay! You said YES! 🥳</h2>
+    <p>Here are the pictures of us together:</p>
+    <img src="your-image-path/image1.jpg" alt="Picture 1">
+    <img src="your-image-path/image2.jpg" alt="Picture 2">
   </div>
 
   <script>
-    // JavaScript for secret code validation
-    function checkCode() {
-      const secretCode = "19/01/2026";
-      const userInput = document.getElementById('codeInput').value;
+    // JavaScript for "NO" button behavior
+    const noButton = document.getElementById('noButton');
+    const screenWidth = window.innerWidth;
+    const screenHeight = window.innerHeight;
 
-      if (userInput === secretCode) {
-        document.getElementById('hiddenContent').style.display = "block";
-      } else {
-        alert("Incorrect code! Try again 💔");
-      }
+    noButton.addEventListener('mouseover', () => {
+      const randomX = Math.floor(Math.random() * (screenWidth - 100));
+      const randomY = Math.floor(Math.random() * (screenHeight - 50));
+      noButton.style.transform = `translate(${randomX}px, ${randomY}px)`;
+    });
+
+    // Function for YES button
+    function accept() {
+      document.querySelector('.button-container').style.display = "none";
+      document.getElementById('hiddenContent').style.display = "block";
     }
   </script>
 
